# minecraft

./: .gitignore  ENHANCED_SPECS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SPECS.md  TODO.md  docker-compose.yml  start.sh
backend/: Cargo.toml  Dockerfile
backend/config/: server.json
backend/minecraft_core/: Cargo.toml
backend/minecraft_core/src/: constants.rs  lib.rs
backend/minecraft_core/src/block/: mod.rs  properties.rs  types.rs
backend/minecraft_core/src/math/: mod.rs  vector.rs
backend/minecraft_core/src/physics/: collision.rs  mod.rs  movement.rs
backend/minecraft_server/: Cargo.toml
backend/minecraft_server/src/: main.rs
backend/minecraft_util/: Cargo.toml
backend/minecraft_util/src/: config.rs  lib.rs  logger.rs  profiler.rs
backend/minecraft_world/: Cargo.toml
backend/minecraft_world/src/: lib.rs
backend/minecraft_world/src/chunk/: collection.rs  mod.rs  provider.rs  section.rs
backend/minecraft_world/src/generator/: flat.rs  mod.rs  noise.rs  overworld.rs
backend/minecraft_world/src/world/: loader.rs  mod.rs
backend/scripts/: start-server.sh
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/nginx/: nginx.conf
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: GameView.tsx  HomePage.tsx
frontend/src/styles/: GameView.css  HomePage.css
frontend/src/types/: three.d.ts
frontend/src/utils/: ChunkManager.ts  NoiseGenerator.ts  SkyboxManager.ts  TextureManager.ts
nginx/: nginx.conf
