[workspace]
name = "minecraft-clone"
members = [
    "minecraft_core",
    "minecraft_util",
    "minecraft_world",
    "minecraft_server"
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Network dependencies
warp = "0.3"
tokio-tungstenite = "0.18"
futures-util = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }

# Data serialization
rmp = "0.8"  # MessagePack
rmp-serde = "1.1"
bincode = "1.3"
zstd = "0.12"  # Compression

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }

# Utils
rand = "0.8"
noise = "0.8"  # For procedural generation
rayon = "1.7"  # Parallel processing
dashmap = "5.4"  # Concurrent hash map

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = true
lto = "thin"
codegen-units = 1
panic = "abort" 