[package]
name = "minecraft_core"
version = "0.1.0"
edition = "2021"
authors = ["Minecraft Clone Developer"]
description = "Core game mechanics for the Minecraft clone"

[dependencies]
minecraft_util = { path = "../minecraft_util" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
nalgebra = "0.32"
rand = "0.8"
uuid = { workspace = true } 