[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2021"
authors = ["Minecraft Clone Developer"]
description = "Server application for the Minecraft clone"

[dependencies]
minecraft_util = { path = "../minecraft_util" }
minecraft_core = { path = "../minecraft_core" }
minecraft_world = { path = "../minecraft_world" }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.19"
futures = "0.3"
dashmap = "5.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = "0.4"
config = "0.13"
ctrlc = "3.2"
clap = { version = "4.3", features = ["derive"] } 