[package]
name = "minecraft_util"
version = "0.1.0"
edition = "2021"
authors = ["Minecraft Clone Developer"]
description = "Utility library for the Minecraft clone"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
config = "0.13" 